--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: version_checker
-description: "A Flutter package to check app versions from the App Store and Play Store."
+description: "A lightweight Flutter package that effortlessly checks for app updates by comparing the installed version with the latest version available on the Apple App Store and Google Play Store."
 version: 1.0.0
 homepage: "https://github.com/eliteio01/flutter_version_checker"  # Replace with actual homepage
 
