--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: version_checker
+name: check_app_version
 description: "A lightweight Flutter package that effortlessly checks for app updates by comparing the installed version with the latest version available on the Apple App Store and Google Play Store."
 version: 1.0.0
-homepage: "https://github.com/eliteio01/flutter_version_checker"  # Replace with actual homepage
+homepage: "https://github.com/eliteio01/check_app_version"  # Replace with actual homepage
 
 environment:
   sdk: ">=3.6.1 <4.0.0"
