--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,12 @@
 name: app_update_monitor
-description: "A lightweight Flutter package that effortlessly checks for app updates by comparing the installed version with the latest version available on the Apple App Store and Google Play Store."
-version: 1.0.0
-homepage: "https://github.com/eliteio01/app_update_monitor"  # Replace with actual homepage
+description: A lightweight Flutter package that effortlessly checks for app updates by comparing the installed version with the latest version available on the Apple App Store and Google Play Store.
+version: 1.0.1
+homepage: https://github.com/eliteio01/app_update_monitor
+repository: https://github.com/eliteio01/app_update_monitor
+issue_tracker: https://github.com/eliteio01/app_update_monitor/issues
+license: MIT
 
 environment:
-#  sdk: ">=3.6.1 <4.0.0"
   sdk: ">=3.5.4 <4.0.0"
   flutter: ">=1.17.0"
 
@@ -23,5 +25,3 @@ dev_dependencies:
   build_runner: ^2.4.6
 
 flutter:
-
-
